RESOLVED FIXED18789
WebView won't get closed with window in certain cases
https://bugs.webkit.org/show_bug.cgi?id=18789
Summary WebView won't get closed with window in certain cases
Darin Adler
Reported 2008-04-28 10:25:54 PDT
By code inspection: If the WebView is put into a window, then setHostWindow is called to make that same window the host window for the view, then the view is removed from the window, and then the window is closed, the WebView won't get closed. If the WebView is put into a window, then setHostWIndow is called to make that same window the host window for a view, then setHostWindow is called to change the host window back to nil, and then the window is closed, the WebView won't get closed.
Attachments
patch (4.12 KB, patch)
2008-04-28 10:26 PDT, Darin Adler
mitz: review+
Darin Adler
Comment 1 2008-04-28 10:26:42 PDT
mitz
Comment 2 2008-04-28 10:33:56 PDT
Comment on attachment 20870 [details] patch r=me
Darin Adler
Comment 3 2008-05-05 09:37:42 PDT
Note You need to log in before you can comment on or make changes to this bug.