2008-05-05  Darin Adler  <darin@apple.com>

Reviewed by Mitz.

        - https://bugs.webkit.org/show_bug.cgi?id=18789
          fix some shouldCloseWithWindow edge cases

        * WebView/WebView.mm:
        (-[WebView viewWillMoveToWindow:]): Fix bug where we would stop observing the
        NSWindowWillCloseNotification if the view was moved out of the window but still
        had that window set as the host window. Also make sure this function doesn't do
        anything if the WebView is already closed.
        (-[WebView setHostWindow:]): Ditto.



Canonical link: https://commits.webkit.org/26091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32874 268f45cc-cd09-0410-ab3c-d52691b4dbfc